# MyBoard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: KanbanBoard.hpp  Task.hpp  TaskAdditionDialog.hpp  TaskDialog.hpp  TaskMovingDialog.hpp  TaskRepository.hpp  Utility.hpp
src/: KanbanBoard.cpp  Main.cpp  TaskAdditionDialog.cpp  TaskDialog.cpp  TaskMovingDialog.cpp  TaskRepository.cpp
